@startuml
' =====================================================================
' ==                       STYLING & THEME                           ==
' =====================================================================

skinparam {
    shadowing false
    RoundCorner 10
    DefaultFontName "Segoe UI, Helvetica" ' A clean, standard font
    DefaultFontSize 12

    package {
        BorderColor #505050
        BackgroundColor #F8F8F8
        FontColor #333333
        stereotypeFontColor #333333
    }
}

skinparam class {
    BackgroundColor<<Domain Entity>> #FFF2D4
    BorderColor<<Domain Entity>> #D4A945

    BackgroundColor<<Application Service>> #D4E6F7
    BorderColor<<Application Service>> #458FD4

    BackgroundColor<<DTO>> #E3F7D4
    BorderColor<<DTO>> #77D445

    BackgroundColor<<Adapter>> #D4F7F2
    BorderColor<<Adapter>> #45D4B7
}
skinparam interface {
    BackgroundColor<<Port>> #F7E3D4
    BorderColor<<Port>> #D47745
}


' =====================================================================
' ==              DIAGRAM DEFINITION & LAYOUT CONTROL                ==
' =====================================================================

package "Domain Layer" as Domain <<Rectangle>> {
    package "user" {
        class User <<Domain Entity>> {
            - id : UUID
            - email : string
            - username : string
            - dateOfBirth : Time
            - createdAt : Time
            - updatedAt : Time
            __
            {static} + NewUser(email, username, dateOfBirth) (*User, error)
            __
            + ID() : UUID
            + Email() : string
            + Username() : string
            + DateOfBirth() : Time
            + CreatedAt() : Time
            + UpdatedAt() : Time
        }

        interface UserRepository <<Port>> {
            + Save(ctx: Context, user: *User) error
            + FindByID(ctx: Context, id: UUID) (*User, error)
            + FindByEmail(ctx: Context, email: string) (*User, error)
        }

        UserRepository ..> User
    }
}

package "Application Layer" as App <<Rectangle>> {
    package "user" {
        interface Service <<Application Service>> {
            + CreateUser(ctx: Context, req: CreateUserRequest) (*CreateUserResponse, error)
        }

        class UserService <<Application Service>> {
            - repo: UserRepository
            __
            {static} + NewUserService(repo: UserRepository) *UserService
            __
            + CreateUser(ctx: Context, req: CreateUserRequest) (*CreateUserResponse, error)
        }

        class CreateUserRequest <<DTO>> {
            + Email : string
            + Username : string
            + DateOfBirth : Time
        }

        class UserResponse <<DTO>> {
            + ID : UUID
            + Email : string
            + Username : string
            + DateOfBirth : Time
        }
    }

    UserService -u-|> Service
    UserService ..> CreateUserRequest
    UserService ..> UserResponse
}

package "Primary Adapters Layer" as Primary <<Rectangle>> {
    package "api" {
        class UserHandler<<Adapter>> {
            - userService: Service
	    __
            {static} + NewUserHandler(service: Service)
	    __
	    + RegisterRoutes() http.Handler
            - handleCreateUser(w: http.ResponseWriter, r: *http.Request)
        }
    }
}

package "Secondary Adapters Layer" as Infra <<Rectangle>> {
    package "memory" {
        class InMemoryUserRepository <<Adapter>> {
            - users: map[UUID]*User
            __
            {static} + NewUserRepository() UserRepository
            __
            + Save(ctx: Context, user: *User) error
            + FindByID(ctx: Context, id: UUID) (*User, error)
            + FindByEmail(ctx: Context, email: string) (*User, error)
        }
    }
}

' =====================================================================
' ==                   RELATIONSHIPS (with direction)                ==
' =====================================================================

' --- Application Layer Dependencies ---
UserService -right-> UserRepository
UserService .right.> User

' --- Primary Adapters Layer Dependencies ---
UserHandler -r-> Service
UserHandler .r.> CreateUserRequest
UserHandler .r.> UserResponse

' --- Secondary Adapters Layer Dependencies ---
InMemoryUserRepository -left-|> UserRepository
InMemoryUserRepository .left.> User

' --- Add a title to provide overall context ---
title Hexagonal Architecture for User Creation Feature

@enduml
